[package]
name = "masstree"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["consistent-milk12"]
description = "Masstree: A high-performance concurrent trie of B+trees for key-value storage"
license = "MIT"
repository = "https://github.com/consistent-milk12/masstree"
keywords = ["data-structures", "concurrent", "trie", "btree", "key-value"]
categories = ["data-structures", "concurrency", "database-implementations"]
readme = "README.md"
include = [
	"src/**/*",
	"benches/**/*",
	"tests/**/*",
	"examples/**/*",
	"Cargo.toml",
	"LICENSE",
	"README.md",
]

[dependencies]
seize = "0.5.1"
parking_lot = "0.12.5"

[dev-dependencies]
divan = "0.1.21"
proptest = "1.9.0"
loom = "0.7.2"
shuttle = "0.8.1"
dashmap = "6.1.0"

[lints.rust]
# Allow loom and shuttle cfg for deterministic concurrency testing
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(shuttle)'] }

# Safety and correctness
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "deny"                                       # Enforce documentation for public API
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

# Future-proofing
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

# Unused code detection
unused = { level = "warn", priority = -1 }

[lints.clippy]
# Clippy lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Performance-critical code policy:
# - These are WARN not DENY to allow targeted #[allow(...)] with justification
# - Each allowed instance must have a SAFETY or INVARIANT comment
# - Prefer debug_assert! + direct access over .get().unwrap() chains
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# Allow in hot paths with justification (use #[allow] locally):
# - missing_panics_doc: Internal functions may panic on invariant violation
# - missing_errors_doc: Not using Result for internal errors

# Pedantic lints - keep most, allow noisy ones
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# These SHOULD be enforced for quality
# must_use_candidate = "warn"  # Default from pedantic
# doc_markdown = "warn"        # Default from pedantic

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
codegen-units = 1
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = 2
strip = "none"
lto = false

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[[bench]]
name = "key"
harness = false

[[bench]]
name = "permuter"
harness = false

[[bench]]
name = "nodeversion"
harness = false

[[bench]]
name = "leaf"
harness = false

[[bench]]
name = "internode"
harness = false

[[bench]]
name = "ksearch"
harness = false

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "dashmap_comparison"
harness = false
