[package]
name = "masstree"
version = "0.1.5"
edition = "2024"
rust-version = "1.92.0"
authors = ["consistent-milk12"]
description = "A high-performance concurrent ordered map (trie of B+trees) - alpha release, not production ready"
license = "MIT"
repository = "https://github.com/consistent-milk12/masstree"
documentation = "https://docs.rs/masstree"
keywords = [
	"data-structures",
	"concurrent",
	"btree",
	"ordered-map",
	"lock-free",
]
categories = ["data-structures", "concurrency", "database-implementations"]
readme = "README.md"
include = [
	"src/**/*",
	"benches/**/*",
	"tests/**/*",
	"Cargo.toml",
	"LICENSE",
	"README.md",
]

[features]
default = []
# Alternative global allocators for benchmarking
mimalloc = ["dep:mimalloc"]
# When disabled (default), all tracing calls compile to no-ops with zero overhead.
# When enabled, auto-initializes a subscriber that writes NDJSON logs to logs/masstree.jsonl.
# Respects RUST_LOG env var (default: info). Set MASSTREE_LOG_CONSOLE=0 to disable console.
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender"]

[dependencies]
seize = "0.5.1"
parking_lot = "0.12.5"
portable-atomic = "1.12.0"

# Optional allocators (enabled via features)
mimalloc = { version = "0.1.48", optional = true }

# Optional tracing (enabled via features) - zero overhead when disabled
# "attributes" enables #[instrument] for function-level tracing
tracing = { version = "0.1.44", features = ["attributes"], optional = true }
tracing-subscriber = { version = "0.3.22", features = [
	"env-filter",
	"fmt",
	"json",
], optional = true }
tracing-appender = { version = "0.2.4", optional = true }

# For formatting JSON logs
serde_json = "1.0.147"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.11.0"
chrono = "0.4.42"


[dev-dependencies]
divan = "0.1.21"
proptest = "1.9.0"
loom = "0.7.2"
shuttle = "0.8.1"
papaya = "0.2.3"
dashmap = "6.1.0"
congee = "0.4.1"
crossbeam-skiplist = "0.1.3"
crossbeam-epoch = "0.9.18"
indexset = { version = "0.12.3", features = ["concurrent"] }
scc = "3.4.8"
sdd = "4.5.3"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = [
	"env-filter",
	"fmt",
	"json",
	"parking_lot",
] }
# Simple #[traced_test] macro for asserting on log output in unit tests
# Note: integration tests need "no-env-filter" feature
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[lints.rust]
# Allow loom and shuttle cfg for deterministic concurrency testing
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(shuttle)'] }

# Safety and correctness
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "deny"                                       # Enforce documentation for public API
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

# Future-proofing
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

# Unused code detection
unused = { level = "warn", priority = -1 }

[lints.clippy]
# Clippy lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Performance-critical code policy:
# - These are WARN not DENY to allow targeted #[allow(...)] with justification
# - Each allowed instance must have a SAFETY or INVARIANT comment
# - Prefer debug_assert! + direct access over .get().unwrap() chains
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# Allow in hot paths with justification (use #[allow] locally):
# - missing_panics_doc: Internal functions may panic on invariant violation
# - missing_errors_doc: Not using Result for internal errors

# Pedantic lints - keep most, allow noisy ones
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# These SHOULD be enforced for quality
# must_use_candidate = "warn"  # Default from pedantic
# doc_markdown = "warn"        # Default from pedantic

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
codegen-units = 1
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = 2
strip = "none"
lto = false

# Profiling profile - optimized for flamegraph/perf
# Frame pointers required for accurate stack traces
[profile.profiling]
inherits = "release"
debug = 2
strip = "none"
lto = false

# Force frame pointers in our code (dependencies need RUSTFLAGS)
[profile.profiling.package."*"]
debug = true

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[[bench]]
name = "concurrent_maps24"
harness = false


[[bench]]
name = "core_benches"
harness = false

[[bench]]
name = "sota"
harness = false

# =============================================================================
# Profiling Binaries
# =============================================================================

[[bin]]
name = "lock_contention"
path = "bin/lock_contention.rs"
